Increase permgen for gradle build